Implement app-header

--- a/src/assets/style/setup/_vars.scss
+++ b/src/assets/style/setup/_vars.scss
@@ -8,8 +8,8 @@ $secondary-gray-clr:#FAFAFA;
 // $btn-clr: ;
 
 $break-mobile: 375px;
-// $break-small: 540px;
-// $break-narrow: 870px;
+$break-small: 600px;
+$break-narrow: 900px;
 // $break-normal: 1000px;
 
 
