--- a/src/assets/style/setup/_mixins.scss
+++ b/src/assets/style/setup/_mixins.scss
@@ -4,17 +4,17 @@
 //     }
 //   }
   
-//   @mixin for-narrow-layout {
-//     @media (max-width: $break-narrow) {
-//       @content;
-//     }
-//   }
+  @mixin for-narrow-layout {
+    @media (max-width: $break-narrow) {
+      @content;
+    }
+  }
   
-//   @mixin for-small-layout {
-//     @media (max-width: $break-small) {
-//       @content;
-//     }
-//   }
+  @mixin for-small-layout {
+    @media (max-width: $break-small) {
+      @content;
+    }
+  }
   
   @mixin for-mobile-layout {
     @media (max-width: $break-mobile) {
