Fix header- mobile-first

--- a/src/assets/style/setup/_mixins.scss
+++ b/src/assets/style/setup/_mixins.scss
@@ -1,23 +1,24 @@
-// @mixin for-normal-layout {
-//     @media (max-width: $break-normal) {
-//       @content;
-//     }
+// @mixin for-mobile-layout {
+//   @media (max-width: $break-mobile) {
+//     @content;
 //   }
-  
-  @mixin for-narrow-layout {
-    @media (max-width: $break-narrow) {
+// }
+
+@mixin for-small-layout {
+  @media (min-width: $break-small) {
+    @content;
+  }
+}
+
+@mixin for-narrow-layout {
+  @media (min-width: $break-narrow) {
+    @content;
+  }
+}
+
+@mixin for-desktop-layout {
+    @media (min-width: $break-desktop) {
       @content;
     }
   }
   
-  @mixin for-small-layout {
-    @media (max-width: $break-small) {
-      @content;
-    }
-  }
-  
-  @mixin for-mobile-layout {
-    @media (max-width: $break-mobile) {
-      @content;
-    }
-  }
