--- a/src/assets/style/setup/_vars.scss
+++ b/src/assets/style/setup/_vars.scss
@@ -5,12 +5,14 @@ $secondary-yellow-clr:#F5BE00;
 $secondary-gray-clr:#FAFAFA;
  
 
-// $btn-clr: ;
 
-$break-mobile: 375px;
-$break-small: 600px;
-$break-narrow: 900px;
-// $break-normal: 1000px;
+// $break-mobile: 375px;
+$break-small: 375px;
+// $break-small: 600px;
+// $break-narrow: 900px;
+$break-narrow: 600px;
+$break-desktop: 900px;
+// $break-desktop: 1000px;
 
 
 //border-radius
