--- a/src/assets/style/components/_app-header.scss
+++ b/src/assets/style/components/_app-header.scss
@@ -1,77 +1,75 @@
 .header-container {
-    height: 64px;
-    margin-inline: 127px;
+    height: 46px;
+    margin-inline: 20px;
     justify-content: space-between;
+    transition: .3s;
+
+    .logo {
+        margin-inline-start: 127px;
+        margin-inline-end: 51px;
+    }
+
+    .nav-bar {
+        gap: 20px;
+    }
+
+    .left-nav-bar {
+        display: none;
+    }
+
+    //600-900
+    @include for-narrow-layout {
+        margin-inline-start: 60px;
+        margin-inline-end: 20px;
+        height: 64px;
+
+        .hamburger {
+            display: none;
+        }
+    
+        .logo{
+            margin-inline-end: 15px;
+            margin-inline-start: 0px;
+        }
+
+    
+    .left-nav-bar {
+        display: flex;
+
+        .main-title {
+            font-weight: 200;
+            font-size: 27px;
+            margin-inline-end: 32px;
+        }
+
+        .secondary-title {
+            font-weight: 200;
+            font-size: 18px;
+            margin-inline-end: 32px;
+        }
+    }
+}
+
+
+//900+
+@include for-desktop-layout {
+    margin-inline: 127px;
+
+    .logo{
+        margin-inline-start: 0;
+    }
 
     .main-title {
         font-weight: 200;
         font-size: 27px;
-        margin-inline-start: 15.7px;
+        margin-inline-end: 32px;
     }
-    
+
     .secondary-title {
         font-weight: 200;
         font-size: 18px;
-        margin-inline-start: 34px;
+        margin-inline-end: 32px;
     }
 
-    .nav-bar {
-        gap: 24px;
-    }
-
-    @include for-narrow-layout {
-        margin-inline: 3.8%;
-
-        .nav-bar {
-            margin-inline-end: 60px;
-        }
-
-        .left-nav-bar{
-            gap: 0;
-        }
-    }
-
-    @include for-small-layout {
-        margin-inline: 3.82%;
-
-        .left-nav-bar{
-            gap: 8px;
-        }
-
-        .main-title{
-            font-weight:200;
-            font-size: 20px;
-            margin-inline-start:5px;
-        }
-
-        .secondary-title{
-            font-weight:200;
-            font-size: 14px;
-            margin-inline-start: 0;
-        }
-
-        .nav-bar {
-            gap: 13px;
-            margin-inline-end: 20px;
-        }
-    }
-
-    @include for-mobile-layout {
-        width: 100%;
-        height: 46px;
-        margin-inline-start: 20px;
-        justify-content: unset;
-
-        .logo {
-            margin-inline-start: 127px;
-            margin-inline-end: 51.07px;
-        }
-
-        .nav-bar {
-            gap: 20px;
-            margin-block: 13px;
-            margin-inline-end: 20px;
-        }
-    }
-
+}
 }
