Implement hero section

--- a/src/assets/style/setup/_vars.scss
+++ b/src/assets/style/setup/_vars.scss
@@ -6,10 +6,8 @@ $secondary-gray-clr:#FAFAFA;
  
 
 
-// $break-mobile: 375px;
+// 
 $break-small: 375px;
-// $break-small: 600px;
-// $break-narrow: 900px;
 $break-narrow: 600px;
 $break-desktop: 900px;
 // $break-desktop: 1000px;
@@ -17,3 +15,11 @@ $break-desktop: 900px;
 
 //border-radius
 // $el-br: ;
+
+
+//fontsize
+$font-small:12px;
+$font-medium:24px;
+$font-large:28px;
+$font-large32:32px;
+$font-large40:40px
