--- a/src/assets/style/components/_hero.scss
+++ b/src/assets/style/components/_hero.scss
@@ -1,14 +1,139 @@
-.hero-container{
-width: 100%;
-// aspect-ratio: ;
+.hero-container {
+    overflow: hidden;
+    position: relative;
 
-.hero-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    
+    .hero-img {
+        width: 100%;
+        max-height: 696px;
+        object-fit: cover;
+        z-index: -1;
+    }
 
-}
+    .main-title-search-container {
+        position: absolute;
+        opacity: .8;
+        background-color: #ffffff;
+        min-width: 335px;
+        min-height: 144px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        .title-input {
+            text-align: center;
+
+            .hero-main-title {
+                font-weight: 200;
+                font-size: $font-large;
+                line-height: 34px;
+                margin: auto;
+
+                @include for-narrow-layout{
+                    font-size: $font-medium;
+                }
+
+            }
+
+            .input-form {
+                display: flex;
+                gap: 12px;
+                border: 1px solid black;
+                margin-block-start: 18px;
+                border-radius: 4px;
+                margin-inline: 5%;
+                color: black;
+                min-width: 315px;
+                
+                @include for-small-layout {
+                    margin-inline: 3%;
+                    
+                }
+                
+                @include for-narrow-layout {
+                    // margin-inline: 5%;
+                    margin-inline: 0;
+                    // min-width: 505px;
+                }
+                @include for-desktop-layout {
+                    width: 505px;
+                }
 
 
+                img {
+                    margin-inline-start: 12px;
+                    padding-block: 5px;
+                }
+
+                input {
+                    border: none;
+                    font-weight: 200;
+                    font-size: $font-small;
+                    min-width: 200px;
+                    max-width:505px;
+                    height: 100%;
+                    outline: none;
+                    padding-block: 5px;
+
+                    @include for-narrow-layout {
+                        font-size: $font-small;
+                        width: 305px;
+                        
+                    }
+                    @include for-desktop-layout {
+                        font-size: $font-medium;
+                        margin-inline-start: 18px;
+                        // line-height: 29.02px;
+                        // letter-spacing: 1.29px;
+                        width: 405px;
+                        
+                    }
+
+                }
+            }
+        }
+    }
+
+
+    @include for-small-layout {
+        .main-title-search-container {
+            width: 90%;
+            height: 45%;
+
+            .title-input {
+                text-align: center;
+                // max-width: 402px;
+                margin: auto;
+
+                .hero-main-title {
+                    font-weight: 200;
+                    font-size: $font-large;
+                    line-height: 36px;
+                    max-width: 402px;
+                }
+
+
+            }
+        }
+    }
+
+    @include for-narrow-layout {
+        .main-title-search-container {
+            .title-input {
+                .hero-main-title {
+                    font-weight: 200;
+                    font-size: $font-large32;
+                    line-height: 40px;
+                }
+            }
+        }
+
+    }
+
+    @include for-desktop-layout {
+        .main-title-search-container {
+            width: 776px;
+            height: 221px;
+        }
+
+    }
 }
