Implement dynamic swiper

--- a/src/assets/style/setup/_vars.scss
+++ b/src/assets/style/setup/_vars.scss
@@ -19,7 +19,13 @@ $break-desktop: 900px;
 
 //fontsize
 $font-small:12px;
+$font-small16:16px;
+$font-small18:18px;
 $font-medium:24px;
 $font-large:28px;
 $font-large32:32px;
-$font-large40:40px
+$font-large40:40px;
+
+// letter
+$mobile-ls:1.97px;
+$desktop-ls:2.67px;
