--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -15,6 +15,10 @@
 // COMPONENTS
 @import 'components/app-header';
 @import 'components/hero';
+@import 'components/swiper-container';
+@import 'components/card';
+@import 'components/popular-res-container';
+@import 'components/signature-dish-container';
 
 
 
