--- a/src/assets/style/setup/_vars.scss
+++ b/src/assets/style/setup/_vars.scss
@@ -23,6 +23,7 @@ $font-small16:16px;
 $font-small18:18px;
 $font-medium:24px;
 $font-large:28px;
+$font-large30:30px;
 $font-large32:32px;
 $font-large40:40px;
 
