Implement our icons section

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -19,6 +19,8 @@
 @import 'components/card';
 @import 'components/popular-res-container';
 @import 'components/signature-dish-container';
+@import 'components/our-icons';
+@import 'components/chef-of-the-week';
 
 
 
