--- a/src/assets/style/components/_signature-dish-container.scss
+++ b/src/assets/style/components/_signature-dish-container.scss
@@ -7,8 +7,8 @@
     .ingredients-icons {
         display: flex;
         flex-direction: column;
-        
-        @include for-narrow-layout{
+
+        @include for-narrow-layout {
             flex-direction: column-reverse;
             justify-content: center;
             align-items: center;
@@ -24,8 +24,8 @@
             line-height: 20px;
             width: 210px;
             min-height: 110px;
-            
-            @include for-narrow-layout{
+
+            @include for-narrow-layout {
                 width: 295px;
                 font-size: $font-medium;
                 line-height: 30px;
@@ -37,7 +37,7 @@
             margin-block: 16px;
             width: 30px;
 
-            @include for-narrow-layout{
+            @include for-narrow-layout {
                 width: 40px;
                 margin-block-start: 0;
             }
@@ -51,15 +51,36 @@
         gap: 4px;
         margin-block-start: 18px;
 
-        @include for-narrow-layout{
+        @include for-narrow-layout {
             justify-content: center;
-            align-items: baseline
+            align-items: center;
+            position: relative;
+
+            ::before,
+            ::after {
+                content: "";
+                content: "";
+                position: absolute;
+                top: 50%;
+                width: 35%;
+                height: 1px;
+                background-color: $primary-gray-clr;
+            }
+
+            ::before {
+                left: 10px;
+              }
+
+              ::after {
+                right: 10px;
+              }
+
         }
 
         .price-tag-currency {
             width: 7.76px;
 
-            @include for-narrow-layout{
+            @include for-narrow-layout {
                 width: 14px;
             }
         }
@@ -69,8 +90,8 @@
             font-size: $font-small16;
             line-height: 19px;
             letter-spacing: $mobile-ls;
-            
-            @include for-narrow-layout{
+
+            @include for-narrow-layout {
                 font-weight: 200;
                 font-size: $font-medium;
                 line-height: 30px;
