--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -21,6 +21,7 @@
 @import 'components/signature-dish-container';
 @import 'components/our-icons';
 @import 'components/chef-of-the-week';
+@import 'components/about-us';
 
 
 
