--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -22,6 +22,7 @@
 @import 'components/our-icons';
 @import 'components/chef-of-the-week';
 @import 'components/about-us';
+@import 'components/footer';
 
 
 
