--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -14,6 +14,7 @@
 
 // COMPONENTS
 @import 'components/app-header';
+@import 'components/hamburger-menu';
 @import 'components/hero';
 @import 'components/swiper-container';
 @import 'components/card';
