Bug fix-ChefOfTheWeek

--- a/src/assets/style/components/_swiper-container.scss
+++ b/src/assets/style/components/_swiper-container.scss
@@ -2,12 +2,17 @@
     margin-inline-start: 20px;
     width: 100%;
 
+
     @include for-narrow-layout {
         display: flex;
         flex-direction: column;
+        flex-grow: 0;
         margin-inline-start: 20px;
         margin-block-end: 40px;
+        // width: auto;
     }
+
+    overflow-x: hidden;
 
     .swiper-slide {
         min-width: 245px;
@@ -54,4 +59,8 @@
         }
     }
 
+    
+}
+.swiper-chef-of-the-week {
+    margin-inline-start: 0;
 }
