--- a/src/assets/style/components/_chef-of-the-week.scss
+++ b/src/assets/style/components/_chef-of-the-week.scss
@@ -1,8 +1,3 @@
-.chef-of-the-week-container {
-    @include for-desktop-layout {
-        justify-content: center
-
-    }
 
     .chef-of-the-week-section {
         display: flex;
@@ -11,8 +6,7 @@
         align-items: center;
 
         @include for-desktop-layout {
-            align-items: flex-start;
-            margin-inline: 127px;
+            align-items: center;
 
         }
 
@@ -137,4 +131,3 @@
             }
         }
     }
-}
