--- a/src/assets/style/components/_card.scss
+++ b/src/assets/style/components/_card.scss
@@ -46,12 +46,14 @@ margin-inline-start: 0;
             font-weight: 400;
             font-size: $font-small18;
             letter-spacing: 2.67px;
-
+            margin-inline-start: 16px;
+            
             @include for-narrow-layout {
                 font-weight: 400;
                 font-size: $font-large30;
                 letter-spacing: 2.67px;
                 margin-block-end: 30px;
+                margin-inline-start: 0;
             }
         }
     }
